# crazyflie_nmpc

./: .gitignore  .gitmodules  LICENSE  README.md  Visualize.py  mocap_acados_tmux.launch
.devcontainer/: Dockerfile  README.md  devcontainer.json.template
crazyflie/: package.xml
crazyflie_controller/: CMakeLists.txt  README.md  package.xml  setup.py
crazyflie_controller/config/: WeightMatrices.cfg  crazyflie_estimator.cfg  crazyflie_params.cfg  crazyflie_paramsCollisionAvoidance.cfg  crazyflie_params_fixed_obs.cfg  crazyflie_params_fixed_obst.cfg  crazyflie_params_one_ball.cfg  crazyflie_params_three_balls.cfg  mocap.yaml
crazyflie_controller/include/: acados_nmpc.hpp  c_generated_code
crazyflie_controller/include/c_generated_code/: Makefile  acados_solver_crazyflie.c  acados_solver_crazyflie.h  acados_solver_crazyflie_pos.c  acados_solver_crazyflie_pos.h  acados_solver_sfunction_crazyflie.c  acados_solver_sfunction_crazyflie_pos.c  main_crazyflie  main_crazyflie.c  main_crazyflie_pos.c  make_sfun.m
crazyflie_controller/include/c_generated_code/crazyflie_model/: crazyflie_expl_ode_fun.c  crazyflie_expl_ode_hess.c  crazyflie_expl_vde_adj.c  crazyflie_expl_vde_forw.c  crazyflie_model.h
crazyflie_controller/include/c_generated_code/crazyflie_pos_model/: crazyflie_pos_expl_ode_fun.c  crazyflie_pos_expl_ode_hess.c  crazyflie_pos_expl_vde_adj.c  crazyflie_pos_expl_vde_forw.c  crazyflie_pos_model.h
crazyflie_controller/include/crazyflie_full_model/: c_generated_code
crazyflie_controller/include/crazyflie_simple_model/: c_generated_code
crazyflie_controller/launch/: acados_predictor.launch  crazyflie2_linearvelocity.launch  crazyflie2_nmpc.launch  crazyflie_nmpc.launch  external_position_eraptor.launch  hl_traj.launch  imu_feedback.launch  logitech.launch  meas_vector.launch  mocap.launch  mocap_acados.launch  nmpc.launch  nmpc_debug.launch  start_crazyflie_joy_eraptor.launch  system_identification.launch  test_joystick.launch  test_mocap_hl.launch  test_rosbag.launch  thrust_identification.launch
crazyflie_controller/msg/: CrazyflieOpenloopTraj.msg  CrazyflieState.msg  CrazyflieStateOpenloopTraj.msg  CrazyflieStateStamped.msg  EulerAnglesStamped.msg  PropellerSpeeds.msg  PropellerSpeedsStamped.msg  acadosInput.msg  acadosOutput.msg  crazyflieStates.msg
crazyflie_controller/scripts/: .gitignore  acados_nmpc.py
crazyflie_controller/scripts/crazyflie_fixed_obst/: export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_full_model/: .gitignore  acados_ocp.json  crazyflieData.m  crazyflie_full_model.slx  export_ode_model.py  generate_c_code.py  main.m
crazyflie_controller/scripts/crazyflie_full_model/c_generated_code/: Makefile  acados_sim_solver_crazyflie.c  acados_sim_solver_crazyflie.h  acados_solver_crazyflie.c  acados_solver_crazyflie.h  acados_solver_sfunction_crazyflie.c  c_generated_code  main_crazyflie  main_crazyflie.c  make_sfun.m
crazyflie_controller/scripts/crazyflie_full_model/c_generated_code/crazyflie_model/: crazyflie_expl_ode_fun.c  crazyflie_expl_ode_hess.c  crazyflie_expl_vde_adj.c  crazyflie_expl_vde_forw.c  crazyflie_model.h
crazyflie_controller/scripts/crazyflie_occupied_workspace/: acados_ocp.json  export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_occupied_workspace/dyn_obst/mult_balls/: export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_occupied_workspace/dyn_obst/one_ball/: export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_occupied_workspace/dyn_obst/three_balls/: export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_occupied_workspace/fixed_obst/: export_ode_model.py
crazyflie_controller/scripts/crazyflie_one_ball/: export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_simple_model/: .gitignore  acados_ocp.json  export_ode_model.py  generate_c_code.py
crazyflie_controller/scripts/crazyflie_simple_model/c_generated_code/: Makefile  acados_solver_crazyflie_simple_model.c  acados_solver_crazyflie_simple_model.h  acados_solver_sfunction_crazyflie_simple_model.c  main_crazyflie_simple_model  main_crazyflie_simple_model.c  make_sfun.m
crazyflie_controller/scripts/crazyflie_simple_model/c_generated_code/crazyflie_simple_model_model/: crazyflie_simple_model_expl_ode_fun.c  crazyflie_simple_model_expl_ode_hess.c  crazyflie_simple_model_expl_vde_adj.c  crazyflie_simple_model_expl_vde_forw.c  crazyflie_simple_model_model.h
crazyflie_controller/scripts/crazyflie_three_balls/: generate_c_code.py
crazyflie_controller/src/: .acados_debug.cpp.kate-swp  acados_collisionAvoidance_FixedObs.cpp  acados_debug.cpp  acados_estimator.cpp  acados_fixed_obs.cpp  acados_fixed_obst.cpp  acados_mpc.cpp  acados_nmpc.cpp  acados_one_ball.cpp  acados_simple_model.cpp  acados_three_balls.cpp  crazyflie_imu.cpp  linvelo_estimation.cpp  map_gen.py  measurements_vector.cpp  optimal_trajectory.txt  parameters.npz  path_gen_client.cpp  rl_test.cpp  rl_trajectory_generation.cpp  rrt_client.py  temp.cpp  traj_generation_8.py
crazyflie_controller/src/rl/: rl_trajectory_generator.py
crazyflie_controller/traj/: ball1.txt  ball2.txt  ball3.txt  crazyflie_ref_traj.txt  helix_traj.txt  hover.txt  square.txt  square_wave_traj.txt  traj_exp.txt  trajectory.txt  trajectory_8.txt  trajectory_design_8_constant_height.txt  trajectory_obs.txt
crazyflie_demo/: CMakeLists.txt  package.xml
crazyflie_demo/launch/: acados_collisionAvoidance.launch  acados_dynamic_obstacle.launch  acados_fixed_obstacle.launch  acados_one_ball.launch  acados_predictor.launch  acados_simple_model.launch  acados_three_balls.launch  bag_play.launch  crazy_AFL.launch  customLogBlocks.launch  external_position_eraptor.launch  hover.launch  hover_vicon.launch  imu_feedback.launch  joy_acados.launch  linearvelocity_estimator.launch  log_stabilizer_euler_angles.launch  logitech.launch  meas_vector.launch  mocap_acados.launch  nmpc.launch  (+12 more)
maps/: CMakeLists.txt  package.xml
rrt_planner/: CMakeLists.txt  README.md  package.xml
(+47 files in other folders)
